# mcp-framework

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  llm.txt  llms.txt  t.sh  test-oauth-flow.ts
.github/workflows/: ci.yml  release.yml
examples/: dynamic_capabilities.rs  http_debug.rs  minimal.rs  with_auth.rs  with_sessions.rs  with_tools.rs
src/: lib.rs  prelude.rs  runner.rs
src/auth/: config.rs  metadata.rs  middleware.rs  mod.rs  proxy.rs  registration.rs  routes.rs  store.rs  templates.rs
src/capability/: filter.rs  handler.rs  mod.rs  registry.rs
src/http_util/: error.rs  mod.rs  query.rs
src/session/: mod.rs
src/transport/: http.rs  mod.rs  stdio.rs
tests/: http_integration.rs  stdio_integration.rs
