[package]
name = "mcp-framework"
version = "0.1.0"
edition = "2021"
description = "An opinionated framework for building MCP servers with HTTP/stdio transport and OAuth/Basic auth"
license = "MIT"
repository = "https://github.com/Plawn/mcp-framework"

[dependencies]
rmcp = { version = "0.5", features = ["server", "transport-streamable-http-server", "transport-worker", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
tracing = "0.1"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
anyhow = "1"
oauth2 = "5"
url = "2"
uuid = { version = "1", features = ["v4"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
urlencoding = "2"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

[profile.release]
strip = true
lto = true
codegen-units = 1
